@@ -96,6 +96,12 @@ use overload
 	'==' => \&Gtk2::Gdk::Atom::eq,
 	fallback => 1;
 
+package Gtk2::CellLayout::DataFunc;
+
+use overload
+	'&{}' => sub { \&Gtk2::CellLayout::DataFunc::invoke },
+	fallback => 1;
+
 package Gtk2::TreeSortable::IterCompareFunc;
 
 use overload
